--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "cookie": "^0.6.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.0",
     "next": "14.1.0",
     "nookies": "^2.5.2",
     "parser": "^0.1.4",
