--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cookie": "^0.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
